--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   firebase_core: ^1.4.0
   cloud_functions: ^3.0.0
   firebase_storage: ^10.0.1
+  hooks_riverpod: ^2.0.2
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
